header and banner finished

--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Latte Cafe</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.2/css/all.css" />
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="wrap">
+                <ul class="menu">
+                    <li class="item">
+                        <a class="link" href="#">About</a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="#">Menu</a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="#">Info</a>
+                    </li>
+                    <li class="item">
+                        <a class="link" href="#">Booking</a>
+                    </li>
+                </ul>
+                <a class="logo" href="#"><img src="./img/logo.png" alt=""></a>
+                <div class="social_media">
+                    <a href="#"><span class="icon"><i class="far fa-envelope"></i></span></a>
+                    <a href="#"><span class="icon"><i class="fab fa-facebook"></i></span></a>
+                    <a href="#"><span class="icon"><i class="fab fa-instagram"></i></span></a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section class="banner">
+        <div class="container banner_wrap">
+            <img class="banner_img" src="./img/banner.png" alt="">
+        </div>  
+    </section>
 </body>
+
 </html>
