--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
             <img class="banner_img" src="./img/banner.png" alt="">
         </div>  
     </section>
+    <section class="about">
+        <div class="container about_wrap">
+            <h4 class="about_h">About Us</h4>
+            <p class="about_p">Tucked away in the corner of Wellington,<span class="latte">Latte Cafe</span> is a local neighbourhood cafe and bar. Latte is all about doing what we love, in a city that we love. We keep stocked with local produce and pastries. Bring your family for a bite, or meet your friends for a coffee or warm drink.</p>
+        </div>
+    </section>
 </body>
 
 </html>
