--- a/index.html
+++ b/index.html
@@ -40,12 +40,29 @@
     <section class="banner">
         <div class="container banner_wrap">
             <img class="banner_img" src="./img/banner.png" alt="">
-        </div>  
+        </div>
     </section>
     <section class="about">
         <div class="container about_wrap">
             <h4 class="about_h">About Us</h4>
-            <p class="about_p">Tucked away in the corner of Wellington,<span class="latte">Latte Cafe</span> is a local neighbourhood cafe and bar. Latte is all about doing what we love, in a city that we love. We keep stocked with local produce and pastries. Bring your family for a bite, or meet your friends for a coffee or warm drink.</p>
+            <p class="about_p">Tucked away in the corner of Wellington,<span class="latte">Latte Cafe</span> is a local
+                neighbourhood cafe and bar. Latte is all about doing what we love, in a city that we love. We keep
+                stocked with local produce and pastries. Bring your family for a bite, or meet your friends for a coffee
+                or warm drink.</p>
+        </div>
+    </section>
+    <section class="menu">
+        <div class="container menu_wrap">
+            <div class="menu_desc">
+                <a href="#"><h4 class="menu_h">Menu</h4></a>
+                <p class="menu_p">We change our menu every season. Here is what we are currently dishing up.</p>
+                <div class="buttons">
+                    <button class="btn menu_btn1">Food Menu</button>
+                    <button class="btn menu_btn2">Drinks Menu</button>
+                    <button class="btn menu_btn3">Takeaway Menu</button>
+                </div>
+            </div>
+            <img src="./img/menu.svg" alt="">
         </div>
     </section>
 </body>
