--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
     <section class="menu">
         <div class="container menu_wrap">
             <div class="menu_desc">
-                <a href="#"><h4 class="menu_h">Menu</h4></a>
+                <a href="#">
+                    <h4 class="menu_h">Menu</h4>
+                </a>
                 <p class="menu_p">We change our menu every season. Here is what we are currently dishing up.</p>
                 <div class="buttons">
                     <button class="btn menu_btn1">Food Menu</button>
@@ -63,6 +65,34 @@
                 </div>
             </div>
             <img src="./img/menu.svg" alt="">
+        </div>
+    </section>
+    <section class="time">
+        <div class="container time_wrap">
+            <div class="location">
+                <h4 class="location_h">Location</h4>
+                <a href="#">
+                    <p class="location_p">101 Cuba St,</p>
+                </a>
+                <a href="#">
+                    <p class="location_p">Te Aro, Wellington</p>
+                </a>
+            </div>
+            <div class="hours">
+                <h4 class="hours_h">Hours</h4>
+                <div class="hours_top">
+                    <p class="hours_p">Tuesday to Friday</p>
+                    <p class="hours_p">7AM - 3PM</p>
+                </div>
+                <div class="hours_bottom">
+                    <p class="hours_p">Saturday to Sunday</p>
+                    <p class="hours_p">8AM - 3PM</p>
+                </div>
+            </div>
+            <div class="days">
+                <h4 class="days_h">Mondays?</h4>
+                <p class="days_p">We are closed on Mondays to reflect and refuel</p>
+            </div>
         </div>
     </section>
 </body>
