--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 or warm drink.</p>
         </div>
     </section>
-    <section class="menu">
+    <section class="Menu">
         <div class="container menu_wrap">
             <div class="menu_desc">
                 <a href="#">
@@ -93,6 +93,15 @@
                 <h4 class="days_h">Mondays?</h4>
                 <p class="days_p">We are closed on Mondays to reflect and refuel</p>
             </div>
+        </div>
+    </section>
+    <section class="photos">
+        <div class="container photos_wrap">
+            <div class="photos_left">
+                <img src="./img/photo1.svg" alt="">
+                <img src="./img/photo2.svg" alt="">
+            </div>
+            <img src="./img/photo3.svg" alt="">
         </div>
     </section>
 </body>
