--- a/index.html
+++ b/index.html
@@ -104,6 +104,17 @@
             <img src="./img/photo3.svg" alt="">
         </div>
     </section>
+    <section class="winning">
+        <div class="container winning_wrap">
+            <h1 class="winning_h">Award winning cafe and bar.</h1>
+            <p class="winning_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
+                in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        
+    </section>
 </body>
 
 </html>
