--- a/index.html
+++ b/index.html
@@ -113,8 +113,34 @@
                 velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
                 in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
-        
+
     </section>
+    <footer class="footer">
+        <div class="container footer_wrap">
+            <div class="footer_top">
+                <a class="footer_link" href="#">Home</a>
+                <a class="footer_link" href="#">About</a>
+                <a class="footer_link" href="#">Menu</a>
+                <a class="footer_link" href="#">Info</a>
+                <a class="footer_link" href="#">Contact</a>
+                <a class="footer_link" href="#">Bookings</a>
+                <a class="footer_link" href="#">Privacy Policy</a>
+            </div>
+            <div class="footer_bottom">
+                <a class="footer_link" href="#">Style Guide</a>
+                <a class="footer_link" href="#">Licenses</a>
+                <a class="footer_link" href="#">Instructions</a>
+                <a class="footer_link" href="#">Instructions</a>
+                <a class="footer_link" href="#">Password</a>
+                <a class="footer_link" href="#">404</a>
+            </div>
+            <div class="by">
+                <p class="by_p">© Latte Cafe 2022.</p>
+                <p class="by_p">Built by Nikolai Bain</p>
+                <p class="by_p">Powered by Webflow.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
