--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header class="header">
         <div class="container">
+            <a class="logoPhone" href="#"><img class="logoPhone_img" src="./img/logo.png" alt=""></a>
             <div class="wrap">
                 <ul class="menu">
                     <li class="item">
@@ -30,9 +31,21 @@
                 </ul>
                 <a class="logo" href="#"><img src="./img/logo.png" alt=""></a>
                 <div class="social_media">
-                    <a href="#"><span class="icon"><i class="far fa-envelope"></i></span></a>
-                    <a href="#"><span class="icon"><i class="fab fa-facebook"></i></span></a>
-                    <a href="#"><span class="icon"><i class="fab fa-instagram"></i></span></a>
+                    <a href="#">
+                        <span class="icon">
+                            <i class="far fa-envelope"></i>
+                        </span>
+                    </a>
+                    <a href="#">
+                        <span class="icon">
+                            <i class="fab fa-facebook"></i>
+                        </span>
+                    </a>
+                    <a href="#">
+                        <span class="icon">
+                            <i class="fab fa-instagram"></i>
+                        </span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -64,21 +77,12 @@
                     <button class="btn menu_btn3">Takeaway Menu</button>
                 </div>
             </div>
-            <img src="./img/menu.svg" alt="">
+            <img class="menu_img" src="./img/menu.svg" alt="">
         </div>
     </section>
     <section class="time">
-        <div class="container time_wrap">
-            <div class="location">
-                <h4 class="location_h">Location</h4>
-                <a href="#">
-                    <p class="location_p">101 Cuba St,</p>
-                </a>
-                <a href="#">
-                    <p class="location_p">Te Aro, Wellington</p>
-                </a>
-            </div>
-            <div class="hours">
+        <div class="container">
+            <div class="hours_phone">
                 <h4 class="hours_h">Hours</h4>
                 <div class="hours_top">
                     <p class="hours_p">Tuesday to Friday</p>
@@ -89,19 +93,41 @@
                     <p class="hours_p">8AM - 3PM</p>
                 </div>
             </div>
-            <div class="days">
-                <h4 class="days_h">Mondays?</h4>
-                <p class="days_p">We are closed on Mondays to reflect and refuel</p>
+            <div class="time_wrap">
+                <div class="location">
+                    <h4 class="location_h">Location</h4>
+                    <a href="#">
+                        <p class="location_p">101 Cuba St,</p>
+                    </a>
+                    <a href="#">
+                        <p class="location_p">Te Aro, Wellington</p>
+                    </a>
+                </div>
+                <div class="hours">
+                    <h4 class="hours_h">Hours</h4>
+                    <div class="hours_top">
+                        <p class="hours_p">Tuesday to Friday</p>
+                        <p class="hours_p">7AM - 3PM</p>
+                    </div>
+                    <div class="hours_bottom">
+                        <p class="hours_p">Saturday to Sunday</p>
+                        <p class="hours_p">8AM - 3PM</p>
+                    </div>
+                </div>
+                <div class="days">
+                    <h4 class="days_h">Mondays?</h4>
+                    <p class="days_p">We are closed on Mondays to reflect and refuel</p>
+                </div>
             </div>
         </div>
     </section>
     <section class="photos">
         <div class="container photos_wrap">
             <div class="photos_left">
-                <img src="./img/photo1.svg" alt="">
-                <img src="./img/photo2.svg" alt="">
+                <img class="photos_imgl" src="./img/photo1.svg" alt="">
+                <img class="photos_imgl" src="./img/photo2.svg" alt="">
             </div>
-            <img src="./img/photo3.svg" alt="">
+            <img class="photos_img" src="./img/photo3.svg" alt="">
         </div>
     </section>
     <section class="winning">
@@ -117,23 +143,26 @@
     </section>
     <footer class="footer">
         <div class="container footer_wrap">
-            <div class="footer_top">
-                <a class="footer_link" href="#">Home</a>
-                <a class="footer_link" href="#">About</a>
-                <a class="footer_link" href="#">Menu</a>
-                <a class="footer_link" href="#">Info</a>
-                <a class="footer_link" href="#">Contact</a>
-                <a class="footer_link" href="#">Bookings</a>
-                <a class="footer_link" href="#">Privacy Policy</a>
+            <div class="footer_links">
+                <div class="footer_top">
+                    <a class="footer_link" href="#">Home</a>
+                    <a class="footer_link" href="#">About</a>
+                    <a class="footer_link" href="#">Menu</a>
+                    <a class="footer_link" href="#">Info</a>
+                    <a class="footer_link" href="#">Contact</a>
+                    <a class="footer_link" href="#">Bookings</a>
+                    <a class="footer_link footer_link_last" href="#">Privacy Policy</a>
+                </div>
+                <div class="footer_bottom">
+                    <a class="footer_link" href="#">Style Guide</a>
+                    <a class="footer_link" href="#">Licenses</a>
+                    <a class="footer_link" href="#">Instructions</a>
+                    <a class="footer_link" href="#">Instructions</a>
+                    <a class="footer_link" href="#">Password</a>
+                    <a class="footer_link" href="#">404</a>
+                </div>
             </div>
-            <div class="footer_bottom">
-                <a class="footer_link" href="#">Style Guide</a>
-                <a class="footer_link" href="#">Licenses</a>
-                <a class="footer_link" href="#">Instructions</a>
-                <a class="footer_link" href="#">Instructions</a>
-                <a class="footer_link" href="#">Password</a>
-                <a class="footer_link" href="#">404</a>
-            </div>
+            <a class="footer_link footer_link_alone" href="#">Privacy Policy</a>
             <div class="by">
                 <p class="by_p">© Latte Cafe 2022.</p>
                 <p class="by_p">Built by Nikolai Bain</p>
